methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:18: error: type mismatch;
 found   : Unit
 required: Boolean
      avance()
            ^